--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>PICTURE-THIS | Startup de photographie</title>
-    <link rel="stylesheet" href="/LE WAGON/StratUP/!Mon_Scirpt.css">
+    <link rel="stylesheet" href="script.css">
   </head>
   <body>
     <header>
